--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <script src="https://cdn.counter.dev/script.js" data-id="154c6878-7558-4eff-90f9-bd4904015df1" data-utcoffset="1"></script>
     <title>StationIO</title>
   </head>
   <body>
